Bug#48851 : Ndbapi : Violated index not easily determined in duplicate key error situation